crates/reap-polymarket-wire/tests/ui/unsigned_order_has_no_signature_method.rs
use reap_polymarket_wire::PmUnsignedClobV2Order;

fn main() {
    let order: PmUnsignedClobV2Order = unreachable!();
    let _ = order.signature();
}
